--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,1 +1,24 @@
 /* Resume Stylesheet */
+
+body {
+	font-family: Arial;
+}
+
+h1, h2 {
+	color: red;
+}
+
+.container {
+	width: 960px;
+	margin:auto;
+}
+
+.title {
+	width: 340px;
+	float: left;
+}
+
+.details {
+	width: 620px;
+	float: right;
+}
